--- a/src/app/wrap/footer.scss
+++ b/src/app/wrap/footer.scss
@@ -1,5 +1,18 @@
 .footer{
     width: 100%;
-    height: 20vh;
-    background: #0a0a0a;
+    // height: 20vh;
+    background: #12131e;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 70px 0;
+    text-align: center;
+    span{
+        color: #f0f0f0;
+        font-size: 15px;
+        line-height: 150%;
+        em{
+            font-size: 14px;
+        }
+    }
 }
