--- a/src/app/wrap/intro/intropage.scss
+++ b/src/app/wrap/intro/intropage.scss
@@ -1,4 +1,46 @@
-.intro-page{
+.intro-page, .web-project, .unity-project{
     width: 100%;
-    height: 80vh;
+    background: #1f1f1f;
+    padding: 0 0 60px 0;
+    ul{
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        li{
+            width: 25%;
+            border: 1px solid #fff;
+            overflow: hidden;
+            a{
+                position: relative;
+                width: 100%;
+                aspect-ratio: 1/1;  // width에 따라 높이 비율 맞춤
+                display: block;
+                img{
+                    object-fit: contain;
+                    opacity: 1;
+                }
+                .img-txt{
+                    position: absolute;
+                    top: 85%;
+                    left: 50%;
+                    width: 100%;
+                    font-size: 30px;
+                    font-weight: 700;
+                    text-align: center;
+                    transform: translate(-50%, -50%);
+                    opacity: 0;
+                }
+                &:hover{
+                    img{
+                        transition: all 0.5s ease-in-out;
+                        opacity: 0.7;
+                    }
+                    .img-txt{
+                        transition: all 0.5s ease-in-out;
+                        opacity: 1;
+                    }
+                }
+            }
+        }
+    }
 }
